ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/accept_terms__c.field-meta.xml
<CustomField>
    <fullName>accept_terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>accept_terms</label>
    <type>Checkbox</type>
</CustomField>