ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The agent or distributor that supports or sells to the account.</inlineHelpText>
    <label>Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Agent</relationshipName>
    <type>Lookup</type>
</CustomField>