ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/application_microelectronics__c.field-meta.xml
<CustomField>
    <fullName>application_microelectronics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>application_microelectronics</label>
    <type>Checkbox</type>
</CustomField>