ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/application_other__c.field-meta.xml
<CustomField>
    <fullName>application_other__c</fullName>
    <label>application_other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>