ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/application_petrochemical__c.field-meta.xml
<CustomField>
    <fullName>application_petrochemical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>application_petrochemical</label>
    <type>Checkbox</type>
</CustomField>