ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/application_pharmaceutical__c.field-meta.xml
<CustomField>
    <fullName>application_pharmaceutical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>application_pharmaceutical</label>
    <type>Checkbox</type>
</CustomField>