ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/application_polymer__c.field-meta.xml
<CustomField>
    <fullName>application_polymer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>application_polymer</label>
    <type>Checkbox</type>
</CustomField>