ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/Areas_of_Application__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Application__c</fullName>
    <label>Areas of Application</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pharmaceutical</fullName>
            </value>
            <value>
                <fullName>microelectronics</fullName>
            </value>
            <value>
                <fullName>petrochemical</fullName>
            </value>
            <value>
                <fullName>polymer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>