ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/Areas_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Interest__c</fullName>
    <label>Areas of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>organic inorganic</fullName>
            </value>
            <value>
                <fullName>organic</fullName>
            </value>
            <value>
                <fullName>catalysts</fullName>
            </value>
            <value>
                <fullName>coating</fullName>
            </value>
            <value>
                <fullName>ionic liquids</fullName>
            </value>
            <value>
                <fullName>flavor fragrances</fullName>
            </value>
            <value>
                <fullName>materials science</fullName>
            </value>
            <value>
                <fullName>physical</fullName>
            </value>
            <value>
                <fullName>nanomaterials</fullName>
            </value>
            <value>
                <fullName>biocatalysts</fullName>
            </value>
            <value>
                <fullName>mof</fullName>
            </value>
            <value>
                <fullName>mocvd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>