ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/attention__c.field-meta.xml
<CustomField>
    <fullName>attention__c</fullName>
    <label>attention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>