ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/company_name__c.field-meta.xml
<CustomField>
    <fullName>company_name__c</fullName>
    <label>company_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>