ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/Converted_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead_Id__c</fullName>
    <label>Converted Lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>