ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/credit_application_on_file__c.field-meta.xml
<CustomField>
    <fullName>credit_application_on_file__c</fullName>
    <defaultValue>false</defaultValue>
    <label>credit_application_on_file</label>
    <type>Checkbox</type>
</CustomField>