ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/customer_type__c.field-meta.xml
<CustomField>
    <fullName>customer_type__c</fullName>
    <label>customer_type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>business</fullName>
            </value>
            <value>
                <fullName>government</fullName>
            </value>
            <value>
                <fullName>university</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>