ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/date_last_order__c.field-meta.xml
<CustomField>
    <fullName>date_last_order__c</fullName>
    <label>date_last_order</label>
    <type>DateTime</type>
</CustomField>