ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/discount__c.field-meta.xml
<CustomField>
    <fullName>discount__c</fullName>
    <label>discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>