ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/interest_biocatalysts__c.field-meta.xml
<CustomField>
    <fullName>interest_biocatalysts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>interest_biocatalysts</label>
    <type>Checkbox</type>
</CustomField>