ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/interest_catalysts__c.field-meta.xml
<CustomField>
    <fullName>interest_catalysts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>interest_catalysts</label>
    <type>Checkbox</type>
</CustomField>