ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/interest_coating__c.field-meta.xml
<CustomField>
    <fullName>interest_coating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>interest_coating</label>
    <type>Checkbox</type>
</CustomField>