ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/interest_flavor_fragrances__c.field-meta.xml
<CustomField>
    <fullName>interest_flavor_fragrances__c</fullName>
    <defaultValue>false</defaultValue>
    <label>interest_flavor_fragrances</label>
    <type>Checkbox</type>
</CustomField>