ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/interest_ionic_liquids__c.field-meta.xml
<CustomField>
    <fullName>interest_ionic_liquids__c</fullName>
    <defaultValue>false</defaultValue>
    <label>interest_ionic_liquids</label>
    <type>Checkbox</type>
</CustomField>