ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/interest_materials_science__c.field-meta.xml
<CustomField>
    <fullName>interest_materials_science__c</fullName>
    <defaultValue>false</defaultValue>
    <label>interest_materials_science</label>
    <type>Checkbox</type>
</CustomField>