ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/interest_mocvd__c.field-meta.xml
<CustomField>
    <fullName>interest_mocvd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>interest_mocvd</label>
    <type>Checkbox</type>
</CustomField>