ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/interest_mof__c.field-meta.xml
<CustomField>
    <fullName>interest_mof__c</fullName>
    <defaultValue>false</defaultValue>
    <label>interest_mof</label>
    <type>Checkbox</type>
</CustomField>