ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/interest_nanomaterials__c.field-meta.xml
<CustomField>
    <fullName>interest_nanomaterials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>interest_nanomaterials</label>
    <type>Checkbox</type>
</CustomField>