ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/interest_organic__c.field-meta.xml
<CustomField>
    <fullName>interest_organic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>interest_organic</label>
    <type>Checkbox</type>
</CustomField>