ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/interest_organic_inorganic__c.field-meta.xml
<CustomField>
    <fullName>interest_organic_inorganic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>interest_organic_inorganic</label>
    <type>Checkbox</type>
</CustomField>