ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/interest_other__c.field-meta.xml
<CustomField>
    <fullName>interest_other__c</fullName>
    <label>interest_other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>