ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/interest_physical__c.field-meta.xml
<CustomField>
    <fullName>interest_physical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>interest_physical</label>
    <type>Checkbox</type>
</CustomField>