ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/mailing_list__c.field-meta.xml
<CustomField>
    <fullName>mailing_list__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mailing_list</label>
    <type>Checkbox</type>
</CustomField>