ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/Operating_Company__c.field-meta.xml
<CustomField>
    <fullName>Operating_Company__c</fullName>
    <description>used to determine what operating company/entity the Account is for</description>
    <label>Operating Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operating_Company</valueSetName>
    </valueSet>
</CustomField>