ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/payment_terms__c.field-meta.xml
<CustomField>
    <fullName>payment_terms__c</fullName>
    <label>payment_terms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>credit card</fullName>
            </value>
            <value>
                <fullName>purchase order</fullName>
            </value>
            <value>
                <fullName>ach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>