ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/PaymentOptions__c.field-meta.xml
<CustomField>
    <fullName>PaymentOptions__c</fullName>
    <label>Payment Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>PO Number</fullName>
            </value>
            <value>
                <fullName>Either</fullName>
                <isActive>false</isActive>
                <label>Either</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>