ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/product_announcements__c.field-meta.xml
<CustomField>
    <fullName>product_announcements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>product_announcements</label>
    <type>Checkbox</type>
</CustomField>