ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/Program_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_End_Date__c</fullName>
    <formula>ADDMONTHS(Program_Start_Date__c ,12)</formula>
    <label>Program End Date</label>
    <type>Date</type>
</CustomField>