ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>credit approved</fullName>
            </value>
            <value>
                <fullName>need review</fullName>
            </value>
            <value>
                <fullName>registration only</fullName>
            </value>
            <value>
                <fullName>require info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>