ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/tax_exempt_number__c.field-meta.xml
<CustomField>
    <fullName>tax_exempt_number__c</fullName>
    <label>tax_exempt_number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>