ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/user_function__c.field-meta.xml
<CustomField>
    <fullName>user_function__c</fullName>
    <label>user_function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>