ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/fields/vat_number__c.field-meta.xml
<CustomField>
    <fullName>vat_number__c</fullName>
    <label>vat_number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>