ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/recordTypes/Commerce.recordType-meta.xml
<RecordType>
    <fullName>Commerce</fullName>
    <active>true</active>
    <description>Commerce Account Record Type for STREM</description>
    <label>Commerce</label>
</RecordType>