ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/recordTypes/Master.recordType-meta.xml
<RecordType>
    <fullName>Master</fullName>
    <active>true</active>
    <description>Master Account Record Type for Ascensus</description>
    <label>Master</label>
</RecordType>