ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Account/listViews/Commerce_Accounts.listView-meta.xml
<ListView>
    <fullName>Commerce_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer_Number__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Commerce</value>
    </filters>
    <label>Commerce Accounts</label>
    <sharedTo>
        <role>Customer_Service</role>
        <role>User</role>
    </sharedTo>
</ListView>